headscale/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
spec:
  selector:
    app: headscale
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: admin
    port: 9090
    targetPort: 9090
    protocol: TCP
