headscale/server/ingress-server.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale-server
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - headscale.traunseenet.com
      secretName: letsencrypt-prod
  rules:
    - host: headscale.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headscale
                port:
                  number: 8080
